--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
+    "standard": "^14.3.3"
+  },
+  "homepage": "."
 }
